programming-language/workspace/compiler/tests/snapshots/snapshots_test__ast_variables.snap
---
source: tests/snapshots_test.rs
expression: "format!(\"{:#?}\", ast)"
---
Program {
    items: [
        Function(
            FunctionDef {
                name: "main",
                params: [],
                return_type: None,
                body: Block {
                    statements: [
                        Statement {
                            kind: VarDecl(
                                VarDecl {
                                    name: "x",
                                    var_type: Some(
                                        Byte,
                                    ),
                                    initializer: Some(
                                        Expr {
                                            kind: IntegerLiteral(
                                                10,
                                            ),
                                            span: Span {
                                                start: 65,
                                                end: 67,
                                            },
                                        },
                                    ),
                                    array_size: None,
                                    span: Span {
                                        start: 55,
                                        end: 67,
                                    },
                                },
                            ),
                            span: Span {
                                start: 55,
                                end: 67,
                            },
                        },
                        Statement {
                            kind: VarDecl(
                                VarDecl {
                                    name: "y",
                                    var_type: Some(
                                        Byte,
                                    ),
                                    initializer: Some(
                                        Expr {
                                            kind: IntegerLiteral(
                                                20,
                                            ),
                                            span: Span {
                                                start: 82,
                                                end: 84,
                                            },
                                        },
                                    ),
                                    array_size: None,
                                    span: Span {
                                        start: 72,
                                        end: 84,
                                    },
                                },
                            ),
                            span: Span {
                                start: 72,
                                end: 84,
                            },
                        },
                        Statement {
                            kind: VarDecl(
                                VarDecl {
                                    name: "z",
                                    var_type: Some(
                                        Byte,
                                    ),
                                    initializer: Some(
                                        Expr {
                                            kind: BinaryOp {
                                                left: Expr {
                                                    kind: Identifier(
                                                        "x",
                                                    ),
                                                    span: Span {
                                                        start: 99,
                                                        end: 100,
                                                    },
                                                },
                                                op: Add,
                                                right: Expr {
                                                    kind: Identifier(
                                                        "y",
                                                    ),
                                                    span: Span {
                                                        start: 103,
                                                        end: 104,
                                                    },
                                                },
                                            },
                                            span: Span {
                                                start: 99,
                                                end: 104,
                                            },
                                        },
                                    ),
                                    array_size: None,
                                    span: Span {
                                        start: 89,
                                        end: 104,
                                    },
                                },
                            ),
                            span: Span {
                                start: 89,
                                end: 104,
                            },
                        },
                        Statement {
                            kind: VarDecl(
                                VarDecl {
                                    name: "w",
                                    var_type: Some(
                                        Word,
                                    ),
                                    initializer: Some(
                                        Expr {
                                            kind: IntegerLiteral(
                                                1000,
                                            ),
                                            span: Span {
                                                start: 119,
                                                end: 123,
                                            },
                                        },
                                    ),
                                    array_size: None,
                                    span: Span {
                                        start: 109,
                                        end: 123,
                                    },
                                },
                            ),
                            span: Span {
                                start: 109,
                                end: 123,
                            },
                        },
                        Statement {
                            kind: Expression(
                                Expr {
                                    kind: FunctionCall {
                                        name: "println",
                                        args: [
                                            Expr {
                                                kind: Identifier(
                                                    "z",
                                                ),
                                                span: Span {
                                                    start: 136,
                                                    end: 137,
                                                },
                                            },
                                        ],
                                    },
                                    span: Span {
                                        start: 128,
                                        end: 138,
                                    },
                                },
                            ),
                            span: Span {
                                start: 128,
                                end: 138,
                            },
                        },
                    ],
                    span: Span {
                        start: 51,
                        end: 139,
                    },
                },
                span: Span {
                    start: 39,
                    end: 139,
                },
            },
        ),
    ],
}
