programming-language/workspace/compiler/tests/snapshots/snapshots_test__codegen_arrays_basic.snap
---
source: tests/snapshots_test.rs
expression: format_hex_dump(&code)
---
Total bytes: 2271

0000: 0C 08 0A 00 9E 20 32 30  36 32 00 00 00 4C 4B 10  |..... 2062...LK.|
0010: A0 00 B1 22 F0 07 20 D2  FF C8 4C 13 08 60 A2 64  |...".. ...L..`.d|
0020: 20 5B 0B 86 02 A8 8A A2  0A 20 5B 0B 85 02 86 04  | [....... [.....|
0030: 98 F0 0B 18 69 30 20 D2  FF A5 02 4C 43 08 A5 02  |....i0 ....LC...|
0040: F0 06 18 69 30 20 D2 FF  A5 04 18 69 30 20 D2 FF  |...i0 .....i0 ..|
0050: 60 85 22 86 23 E0 00 D0  04 20 1F 08 60 A9 00 85  |`.".#.... ..`...|
0060: 02 A9 10 85 FD A9 27 85  FE 20 97 08 A9 E8 85 FD  |......'.. ......|
0070: A9 03 85 FE 20 97 08 A9  64 85 FD A9 00 85 FE 20  |.... ...d...... |
0080: 97 08 A9 0A 85 FD A9 00  85 FE 20 97 08 A5 22 18  |.......... ...".|
0090: 69 30 20 D2 FF 60 A2 00  A5 23 C5 FE 90 19 D0 06  |i0 ..`...#......|
00A0: A5 22 C5 FD 90 11 A5 22  38 E5 FD 85 22 A5 23 E5  |."....."8...".#.|
00B0: FE 85 23 E8 4C 99 08 E0  00 D0 04 A5 02 F0 0B 8A  |..#.L...........|
00C0: 18 69 30 20 D2 FF A9 01  85 02 60 C9 00 F0 15 A9  |.i0 ......`.....|
00D0: 54 20 D2 FF A9 52 20 D2  FF A9 55 20 D2 FF A9 45  |T ...R ...U ...E|
00E0: 20 D2 FF 60 A9 46 20 D2  FF A9 41 20 D2 FF A9 4C  | ..`.F ...A ...L|
00F0: 20 D2 FF A9 53 20 D2 FF  A9 45 20 D2 FF 60 C9 80  | ...S ...E ..`..|
0100: 90 0C 48 A9 2D 20 D2 FF  68 49 FF 18 69 01 20 1F  |..H.- ..hI..i. .|
0110: 08 60 85 22 86 23 8A C9  80 90 16 A9 2D 20 D2 FF  |.`.".#......- ..|
0120: A5 22 49 FF 18 69 01 85  22 A5 23 49 FF 69 00 85  |."I..i..".#I.i..|
0130: 23 A5 22 A6 23 20 52 08  60 85 22 86 23 8A 29 80  |#.".# R.`.".#.).|
0140: F0 16 A9 2D 20 D2 FF A5  22 49 FF 18 69 01 85 22  |...- ..."I..i.."|
0150: A5 23 49 FF 69 00 85 23  A5 23 4A 85 03 A5 22 6A  |.#I.i..#.#J..."j|
0160: 85 02 46 03 66 02 46 03  66 02 46 03 66 02 A5 22  |..F.f.F.f.F.f.."|
0170: 29 0F 48 A5 02 A6 03 20  52 08 A9 2E 20 D2 FF 68  |).H.... R... ..h|
0180: 85 02 A9 00 85 22 85 23  A5 02 F0 4C A5 02 29 01  |.....".#...L..).|
0190: F0 0D 18 A5 22 69 71 85  22 A5 23 69 02 85 23 A5  |...."iq.".#i..#.|
01A0: 02 29 02 F0 0D 18 A5 22  69 E2 85 22 A5 23 69 04  |.)....."i..".#i.|
01B0: 85 23 A5 02 29 04 F0 0D  18 A5 22 69 C4 85 22 A5  |.#..)....."i..".|
01C0: 23 69 09 85 23 A5 02 29  08 F0 0D 18 A5 22 69 88  |#i..#..)....."i.|
01D0: 85 22 A5 23 69 13 85 23  A5 22 A6 23 20 E1 09 60  |.".#i..#.".# ..`|
01E0: 85 02 86 03 A0 00 A5 03  C9 03 90 19 D0 06 A5 02  |................|
01F0: C9 E8 90 11 38 A5 02 E9  E8 85 02 A5 03 E9 03 85  |....8...........|
0200: 03 C8 4C E7 09 98 18 69  30 20 D2 FF A0 00 A5 03  |..L....i0 ......|
0210: D0 06 A5 02 C9 64 90 11  38 A5 02 E9 64 85 02 A5  |.....d..8...d...|
0220: 03 E9 00 85 03 C8 4C 0F  0A 98 18 69 30 20 D2 FF  |......L....i0 ..|
0230: A0 00 A5 02 C9 0A 90 09  38 E9 0A 85 02 C8 4C 33  |........8.....L3|
0240: 0A 98 18 69 30 20 D2 FF  A5 02 18 69 30 20 D2 FF  |...i0 .....i0 ..|
0250: 60 85 22 86 23 8A 4A 4A  29 1F 85 02 C9 1F D0 41  |`.".#.JJ)......A|
0260: A5 23 29 03 05 22 D0 29  A5 23 30 10 A9 49 20 D2  |.#)..".).#0..I .|
0270: FF A9 4E 20 D2 FF A9 46  20 D2 FF 60 A9 2D 20 D2  |..N ...F ..`.- .|
0280: FF A9 49 20 D2 FF A9 4E  20 D2 FF A9 46 20 D2 FF  |..I ...N ...F ..|
0290: 60 A9 4E 20 D2 FF A9 41  20 D2 FF A9 4E 20 D2 FF  |`.N ...A ...N ..|
02A0: 60 A5 02 D0 31 A5 23 29  03 05 22 D0 19 A5 23 10  |`...1.#).."...#.|
02B0: 05 A9 2D 20 D2 FF A9 30  20 D2 FF A9 2E 20 D2 FF  |..- ...0 .... ..|
02C0: A9 30 20 D2 FF 60 A9 30  20 D2 FF A9 2E 20 D2 FF  |.0 ..`.0 .... ..|
02D0: A9 30 20 D2 FF 60 A5 23  10 0B A9 2D 20 D2 FF A5  |.0 ..`.#...- ...|
02E0: 23 29 7F 85 23 A5 22 A6  23 20 C9 0E 20 52 08 A9  |#)..#.".# .. R..|
02F0: 2E 20 D2 FF A9 30 20 D2  FF 60 85 22 86 FD A9 00  |. ...0 ..`."....|
0300: 85 23 A2 08 0A 26 23 06  22 90 07 18 65 FD 90 02  |.#...&#."...e...|
0310: E6 23 CA D0 EF A6 23 60  20 FB 0A 60 85 22 86 FD  |.#....#` ..`."..|
0320: A9 00 85 02 A5 22 10 09  49 FF 18 69 01 85 22 E6  |....."..I..i..".|
0330: 02 A5 FD 10 09 49 FF 18  69 01 85 FD C6 02 A5 22  |.....I..i......"|
0340: A6 FD 20 FB 0A 85 22 A5  02 F0 08 A5 22 49 FF 18  |.. ..."....."I..|
0350: 69 01 60 A5 22 60 20 1D  0B 60 E0 00 D0 05 A9 00  |i.`."` ..`......|
0360: A2 00 60 85 22 86 FD A9  00 85 23 A5 22 C5 FD 90  |..`.".....#."...|
0370: 08 38 E5 FD E6 23 4C 6E  0B AA A5 23 60 20 5B 0B  |.8...#Ln...#` [.|
0380: 60 85 22 86 FD A9 00 85  02 85 04 A5 22 10 0B 49  |`."........."..I|
0390: FF 18 69 01 85 22 E6 02  E6 04 A5 FD 10 0D 49 FF  |..i.."........I.|
03A0: 18 69 01 85 FD A5 02 49  01 85 02 A5 22 A6 FD 20  |.i.....I....".. |
03B0: 5B 0B 85 22 86 FD A5 02  F0 09 A5 22 49 FF 18 69  |[.."......."I..i|
03C0: 01 85 22 A5 04 F0 09 A5  FD 49 FF 18 69 01 85 FD  |.."......I..i...|
03D0: A5 22 A6 FD 60 20 82 0B  60 A5 02 85 22 A5 03 85  |."..` ..`..."...|
03E0: 23 20 57 0B 85 02 86 03  A0 04 A5 03 C9 80 66 03  |# W...........f.|
03F0: 66 02 88 D0 F5 A5 02 A6  03 60 A5 02 85 22 A5 03  |f........`..."..|
0400: 85 23 A0 04 06 22 26 23  88 D0 F9 20 D6 0B 60 20  |.#..."&#... ..` |
0410: D6 0B 60 A5 03 38 E5 23  50 02 49 80 30 0D D0 0D  |..`..8.#P.I.0...|
0420: A5 02 C5 22 90 05 A9 00  4C 2E 0C A9 01 60 A5 03  |..."....L....`..|
0430: 38 E5 23 50 02 49 80 30  0F D0 0F A5 02 C5 22 90  |8.#P.I.0......".|
0440: 07 F0 05 A9 00 4C 4B 0C  A9 01 60 20 2F 0C 49 01  |.....LK...` /.I.|
0450: 60 20 14 0C 49 01 60 A5  22 05 23 29 7F F0 0B A5  |` ..I.`.".#)....|
0460: 02 05 03 29 7F F0 0A 4C  79 0C A5 02 A6 03 4C B7  |...)...Ly.....L.|
0470: 0C A5 22 A6 23 4C B7 0C  A5 23 4A 4A 29 1F 85 FD  |..".#L...#JJ)...|
0480: A5 03 4A 4A 29 1F 85 FE  A5 FD C5 FE F0 05 B0 E1  |..JJ)...........|
0490: 4C 6B 0C A5 23 29 80 85  04 A5 03 29 80 C5 04 F0  |Lk..#).....)....|
04A0: 07 A5 22 A6 23 4C B7 0C  18 A5 22 65 02 85 04 A5  |..".#L...."e....|
04B0: 23 65 03 AA A5 04 60 A5  03 49 80 85 03 20 58 0C  |#e....`..I... X.|
04C0: 60 A5 22 05 23 29 7F F0  42 A5 02 05 03 29 7F F0  |`.".#)..B....)..|
04D0: 3A A5 23 45 03 29 80 85  05 A5 23 4A 4A 29 1F 85  |:.#E.)....#JJ)..|
04E0: FD A5 03 4A 4A 29 1F 18  65 FD 38 E9 0F 30 1C C9  |...JJ)..e.8..0..|
04F0: 1F 90 0A A5 05 09 7C AA  A9 00 4C 10 0D 85 FD A5  |......|...L.....|
0500: FD 0A 0A 05 05 AA A5 22  4C 10 0D A9 00 A2 00 60  |......."L......`|
0510: A5 22 05 23 29 7F F0 3C  A5 02 05 03 29 7F F0 3B  |.".#)..<....)..;|
0520: A5 23 45 03 29 80 85 05  A5 23 4A 4A 29 1F 85 FD  |.#E.)....#JJ)...|
0530: A5 03 4A 4A 29 1F 85 FE  A5 FD 38 E5 FE 18 69 0F  |..JJ).....8...i.|
0540: 30 12 C9 1F B0 15 85 FD  A5 FD 0A 0A 05 05 AA A5  |0...............|
0550: 22 4C 63 0D A9 00 A2 00  4C 63 0D A5 05 09 7C AA  |"Lc.....Lc....|.|
0560: A9 00 60 A5 02 05 03 29  7F F0 30 A5 23 29 80 85  |..`....)..0.#)..|
0570: 05 A5 23 29 7F 85 23 A5  03 29 7F 85 03 A5 23 C5  |..#)..#..)....#.|
0580: 03 90 1D D0 06 A5 22 C5  02 90 15 20 B8 0C 85 22  |......".... ..."|
0590: 86 23 A5 23 29 7F 85 23  4C 7E 0D A9 00 A2 00 60  |.#.#)..#L~.....`|
05A0: A5 23 05 05 AA A5 22 60  48 8A 49 80 AA 68 60 A5  |.#...."`H.I..h`.|
05B0: 23 45 03 30 26 A5 23 30  11 A5 23 C5 03 90 1C D0  |#E.0&.#0..#.....|
05C0: 1F A5 22 C5 02 90 14 4C  E1 0D A5 03 C5 23 90 0B  |.."....L.....#..|
05D0: D0 0E A5 02 C5 22 90 03  4C E1 0D A9 01 4C E3 0D  |....."..L....L..|
05E0: A9 00 60 A5 22 C5 02 D0  09 A5 23 C5 03 D0 03 A9  |..`.".....#.....|
05F0: 01 60 20 B0 0D 60 20 E4  0D 49 01 60 20 B0 0D 49  |.` ..` ..I.` ..I|
0600: 01 60 A5 22 C5 02 D0 09  A5 23 C5 03 D0 03 A9 01  |.`.".....#......|
0610: 60 A9 00 60 20 03 0E 49  01 60 C9 00 D0 05 A9 00  |`..` ..I.`......|
0620: A2 00 60 85 22 A2 00 A0  16 A5 22 29 80 D0 0C 06  |..`.".....")....|
0630: 22 88 C0 00 D0 F3 A9 00  A2 00 60 98 0A 0A AA A5  |".........`.....|
0640: 22 29 7F 4A 4A 4A 85 02  8A 05 02 AA A5 22 0A 0A  |").JJJ......."..|
0650: 0A 60 85 22 86 23 05 23  D0 05 A9 00 A2 00 60 A0  |.`.".#.#......`.|
0660: 1E A5 23 29 80 D0 0E 06  22 26 23 88 C0 00 D0 F1  |..#)...."&#.....|
0670: A9 00 A2 00 60 98 0A 0A  85 02 A5 23 29 60 4A 4A  |....`......#)`JJ|
0680: 4A 4A 4A 05 02 AA A5 23  29 1F 0A 0A 0A 85 02 A5  |JJJ....#).......|
0690: 22 4A 4A 4A 4A 4A 05 02  60 85 22 86 23 8A 4A 4A  |"JJJJJ..`.".#.JJ|
06A0: 29 1F C9 0F B0 03 A9 00  60 38 E9 0F A8 C0 08 90  |).......`8......|
06B0: 03 A9 FF 60 A5 23 29 03  09 04 85 02 C0 00 F0 05  |...`.#).........|
06C0: 06 02 88 D0 FB A5 02 60  85 22 86 23 8A 4A 4A 29  |.......`.".#.JJ)|
06D0: 1F 85 FD C9 0F B0 05 A9  00 A2 00 60 A5 23 29 03  |...........`.#).|
06E0: 09 04 85 03 A5 22 85 02  A5 FD C9 19 B0 12 A9 19  |....."..........|
06F0: 38 E5 FD A8 C0 00 F0 23  46 03 66 02 88 4C F5 0E  |8......#F.f..L..|
0700: A5 FD 38 E9 19 A8 C0 06  90 05 A9 FF A2 FF 60 C0  |..8...........`.|
0710: 00 F0 08 06 02 26 03 88  4C 10 0F A5 02 A6 03 60  |.....&..L......`|
0720: 85 22 86 23 05 23 D0 05  A9 00 A2 00 60 A5 23 29  |.".#.#......`.#)|
0730: 80 85 05 10 11 A5 22 49  FF 18 69 01 85 22 A5 23  |......"I..i..".#|
0740: 49 FF 69 00 85 23 A0 1A  A5 23 29 80 D0 0E 06 22  |I.i..#...#)...."|
0750: 26 23 88 C0 00 D0 F1 A9  00 A2 00 60 98 0A 0A 85  |&#.........`....|
0760: 02 A5 23 29 60 4A 4A 4A  4A 4A 05 02 05 05 AA A5  |..#)`JJJJJ......|
0770: 23 29 1F 0A 0A 0A 85 02  A5 22 4A 4A 4A 4A 4A 05  |#)......."JJJJJ.|
0780: 02 60 85 22 86 23 8A 29  80 85 05 A5 23 4A 4A 29  |.`.".#.)....#JJ)|
0790: 1F C9 0B B0 05 A9 00 A2  00 60 C9 1B 90 0E A5 05  |.........`......|
07A0: 30 05 A9 FF A2 7F 60 A9  00 A2 80 60 38 E9 0B A8  |0.....`....`8...|
07B0: A5 23 29 03 09 04 85 03  A5 22 85 02 C0 00 F0 07  |.#)......"......|
07C0: 06 02 26 03 88 D0 F9 A5  05 10 11 A5 02 49 FF 18  |..&..........I..|
07D0: 69 01 85 02 A5 03 49 FF  69 00 85 03 A5 02 A6 03  |i.....I.i.......|
07E0: 60 A9 00 85 02 20 CF FF  C9 0D F0 0C A4 02 99 00  |`.... ..........|
07F0: C1 C8 84 02 C0 FF 90 ED  A4 02 A9 00 99 00 C1 A9  |................|
0800: 00 A2 C1 60 A9 FF 8D 0E  D4 8D 0F D4 A9 80 8D 12  |...`............|
0810: D4 AD 1B D4 4D 04 DC 4D  12 D0 85 06 AD 1B D4 4D  |....M..M.......M|
0820: 05 DC 85 07 05 06 D0 08  A9 AC 85 06 A9 E1 85 07  |................|
0830: 60 A5 06 0A 26 07 90 02  49 2D 85 06 4D 1B D4 60  |`...&...I-..M..`|
0840: 20 32 10 4A 4A 4A 4A A2  00 60 20 DC 10 A9 0A 8D  | 2.JJJJ..` .....|
0850: 00 C0 A9 14 8D 01 C0 A9  1E 8D 02 C0 A9 28 8D 03  |.............(..|
0860: C0 A9 32 8D 04 C0 A9 00  A8 A9 00 85 22 A9 C0 85  |..2........."...|
0870: 23 B1 22 8D 05 C0 A9 02  A8 A9 00 85 22 A9 C0 85  |#."........."...|
0880: 23 B1 22 8D 06 C0 A9 04  A8 A9 00 85 22 A9 C0 85  |#."........."...|
0890: 23 B1 22 8D 07 C0 A9 19  48 A9 01 A8 A9 00 85 22  |#.".....H......"|
08A0: A9 C0 85 23 68 91 22 A9  2D 48 A9 03 A8 A9 00 85  |...#h.".-H......|
08B0: 22 A9 C0 85 23 68 91 22  A9 01 48 A9 00 A8 A9 08  |"...#h."..H.....|
08C0: 85 22 A9 C0 85 23 68 91  22 A9 FF 48 A9 09 A8 A9  |."...#h."..H....|
08D0: 08 85 22 A9 C0 85 23 68  91 22 60 20 05 10 60     |.."...#h."` ..`|
